--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "naive-ui": "^2.33.3",
+    "qiankun": "^2.8.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5"
